# School-Projects

./: .gitignore  README.md
lab-env/engine/render/: window.h
lab-env/projects/half-edge_mesh_CCSubdivision/: CMakeLists.txt
lab-env/projects/half-edge_mesh_CCSubdivision/code/: exampleapp.cc  exampleapp.h  graphicsNode.cc  graphicsNode.h  half-edge_mesh.cc  half-edge_mesh.h  meshResource.cc  meshResource.h  pointLight.h  shaderResource.cc  shaderResource.h  textureResource.cc  textureResource.h
lab-env/projects/s0008e_skeleton/: CMakeLists.txt
lab-env/projects/s0008e_skeleton/code/: DDSParser.h  DDSStructs.h  GraphicsNode.h  MathLib3D.h  MeshResource.h  Nax3Parser.h  Nax3Structs.h  NebulaSkeletonParser.h  Nvx2Parser.h  Nvx2Structs.h  PointLight.h  ShaderResource.h  Skeleton.h  TextureResource.h  exampleapp.cpp  exampleapp.h
lab-env/projects/s0009d_fysik/: CMakeLists.txt
lab-env/projects/s0009d_fysik/code/: EPA.h  GJK.h  GraphicsNode.h  MathLib3D.h  MeshResource.h  ShaderResource.h  TextureResource.h  exampleapp.cc  exampleapp.h  gameObject.h  lineSweep.h  physics.h
lab-env/resources/shaders/: axisArrow.fragmentshader  axisArrow.vertexshader  basic.fragmentshader  basic.vertexshader  skinning.fragmentshader  skinning.vertexshader  standard.fragmentshader  standard.vertexshader
